
skulls-x230 0.0.11 - released 2018-11-05
----------------------------------------
This release includes the following changes:
* based on coreboot commit 27ffa4c790
  (parent in master branch 715cb40963)
* -b option for external scripts for RPi SPI speed


skulls-x230 0.0.10 - released 2018-09-06
----------------------------------------
This release includes the following changes:
* based on coreboot commit 8823037d50
  (parent in master branch fb758d420b)
* updated latest original Lenovo BIOS version


skulls-x230 0.0.9 - released 2018-08-06
---------------------------------------
This release includes the following changes:
* based on coreboot commit 4591bb6f7b
  (parent in master branch 9ea7762e79)
* brightness level is remembered now
* added script to check for new releases
* improved installation scripts
* update coreboot-sdk to version 1.52


skulls-x230 0.0.8 - released 2018-07-06
---------------------------------------
This release includes the following changes:
* based on coreboot commit e49ac56808
  (parent in master branch cf243657e7)
* update SeaBIOS to version 1.11.2
* update Intel's microcode revision from 1f to 20
  (this includes Spectre Variant 3a and 4 mitigations)


skulls-x230 0.0.7 - released 2018-06-18
---------------------------------------
This release includes the following changes:
* based on coreboot commit a7835c462e
* reproducible builds
* improved installation scripts
* keep the TPM active


skulls-x230 0.0.6 - released 2018-05-16
---------------------------------------
This release includes the following changes:
* based on coreboot commit d8ec973fd2
* faster booting (unneeded driver init removed)
* documentation improvements


coreboot-x230 0.0.5 - released 2018-04-18
-----------------------------------------
This release includes the following changes:
* based on coreboot commit 92263853ad
* update SeaBIOS to version 1.11.1
* new release packaging
* scripts to simplify flashing


coreboot-x230 0.0.4 - released 2018-03-15